kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
  labels:
    app: calculator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
      - name: calculator-app
        image: ghcr.io/bharathi-vbr/devsecops_demo:f347b2db4b97897c94befc5d2b8387a3cd354fff
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: github-container-registry   # Create with kubectl/create secret for GHCR
