kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-app
spec:
  type: NodePort
  selector:
    app: calculator-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
